k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: bigdata-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: ghcr.io/piiaa01/producer:latest
