k8s/spark-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-streaming
  namespace: bigdata-pipeline
  labels:
    app: spark-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-streaming
  template:
    metadata:
      labels:
        app: spark-streaming
    spec:
      containers:
        - name: spark-streaming
          image: ghcr.io/piiaa01/spark-app:latest
          imagePullPolicy: IfNotPresent
