k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: bigdata-pipeline
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/piiaa01/dashboard:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: bigdata-pipeline
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
