k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: bigdata-pipeline
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: bigdata-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 9092
              name: broker
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data

      volumes:
        - name: kafka-data
          emptyDir: {}
